--- a/assets/css/_forms.scss
+++ b/assets/css/_forms.scss
@@ -6,19 +6,20 @@ form {
 
 fieldset {
   position: relative;
-  // border: 1px solid #e7e7e7;
-  background-color: #f5f5f5;
+  border: 1px solid #e7e7e7;
   padding: 15px;
-  margin-bottom: 5px;
+  margin-bottom: 10px;
 
   legend {
-    display: inline-block;
-    width: auto;
+    display: inline-block !important;
+    padding: 10px;
+    width: auto !important;
+    border: 0 !important;
   }
 
-  .close {
+  .close-action {
     position: absolute;
-    right: 24px;
+    right: 11px;
     top: 24px;
     z-index: 88;
   }
