UPDATE Custom grid styles.

--- a/assets/css/_grids.scss
+++ b/assets/css/_grids.scss
@@ -8,6 +8,7 @@
     vertical-align: middle;
     border: 1px solid #006e8f;
     padding: 40px;
+    margin-bottom: 15px;
   }
 
   &--centered {
@@ -17,7 +18,7 @@
     a {
       display: block;
 
-      &>span {
+      & > span {
         font-size: 30px;
         display: block;
         margin-bottom: 24px;
