--- a/assets/css/_menus.scss
+++ b/assets/css/_menus.scss
@@ -6,7 +6,14 @@
 
 .menu {
   &--admin {
-    background-color: #006e8f;
+    background-color: $primary;
+  }
+
+  &--main {
+    padding-bottom: 24px;
+    padding-top: 24px;
+    background-color: transparent;
+    text-align: right;
   }
 }
 
@@ -50,6 +57,53 @@
 
     &__actions {
       text-align: right;
+    }
+  }
+}
+
+.menu {
+  &--user {
+    li, .ant-menu-item {
+      position: relative;
+      border: 0 !important;
+
+      &:hover {
+        border: 0 !important;
+        color: $primary;
+      }
+    }
+    .ant-menu-item-selected {
+      color: $black;
+      border-bottom: 0;
+
+      &:after {
+        @include after;
+      }
+    }
+    &__login {
+      position: relative;
+      padding: 12px 0;
+
+      .access-links {
+        text-align: right;
+      }
+
+      a {
+        text-transform: uppercase;
+        color: rgba(108,109,96,.65);
+
+        &:hover {
+          color: $primary;
+        }
+      }
+    }
+  }
+}
+
+.menu {
+  &--admin {
+    .ant-menu-item-selected {
+      background-color: fade-out($black, .9) !important;
     }
   }
 }
