--- a/assets/css/global.scss
+++ b/assets/css/global.scss
@@ -1,111 +1,8 @@
-@import "forms";
-@import "menus";
+@import "variables";
+@import "structure";
 @import "grids";
-html,
-body,
-#__next {
-  margin: 0px;
-  padding: 0px;
-  background: #f5f5f5;
-  height: 100%;
-}
-
-h1 {
-  margin-top: 24px;
-}
-
-.app {
-  position: relative;
-  background: #ffffff;
-  min-height: 100%;
-
-  &--tools {
-    margin-top: 24px;
-  }
-
-  &--sidebar {
-    width: 280px;
-    min-height: 100%;
-    overflow: auto;
-    background-color: #001529;
-    color: #ffffff;
-
-    a {
-      text-decoration: none;
-    }
-  }
-
-  &--contents {
-    padding-top: 30px;
-    padding-bottom: 30px;
-    background-color: #ffffff;
-  }
-}
-
-.app {
-  &--page-loader {
-    position: fixed;
-    z-index: 99;
-    bottom: 20px;
-    left: 20px;
-    color: #000;
-  }
-
-  &--spinner {
-    width: 100%;
-    height: 100%;
-    position: fixed;
-    overflow: hidden;
-    background-color: #001529;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    z-index: 88;
-    color: #ffffff;
-  }
-
-  &.login {
-    display: block;
-    background: #001529;
-  }
-
-  &.signup {
-    display: block;
-    background: #001529;
-    background-size: cover;
-    background-attachment: fixed;
-  }
-
-  &--login,
-  &--signup {
-    height: 100%;
-
-    label,
-    p,
-    h1,
-    h3 {
-      color: #ffffff;
-    }
-
-    .avatar {
-      margin-bottom: 24px;
-      text-align: center;
-    }
-
-    .info {
-      margin-top: 24px;
-    }
-  }
-}
-
-.login,
-.signup {
-  &--form {
-    background-color: #000000;
-    padding: 24px;
-    // border-radius: 15px;
-    border: 1px solid #ffffff;
-  }
-}
-
+@import "menus";
+@import "forms";
 @import "contents";
+@import "login";
+@import "misc";
