--- a/assets/css/_login.scss
+++ b/assets/css/_login.scss
@@ -41,7 +41,7 @@
     // background-color: #000000;
     background-color: #ffffff;
     padding: 24px;
-    border: 1px solid #000000;
+    // border: 1px solid #000000;
     // border: 1px solid #ffffff;
   }
 }
