--- a/assets/css/shared/_variables.scss
+++ b/assets/css/shared/_variables.scss
@@ -34,6 +34,7 @@ $color-primary--20: rgba(0, 110, 143, 0.2);
 $color-secondary: #019688;
 //boxShadow
 $shadow: 10px 10px 20px rgba(0, 0, 0, 0.05);
+$shadow-input: -10px 5px 15px rgba(0, 0, 0, 0.08);
 
 $color-error: #ff3743;
 $color-warning: #f5a623;
