--- a/assets/css/_structure.scss
+++ b/assets/css/_structure.scss
@@ -65,7 +65,7 @@ h4 {
 .umana {
   width: 100%;
   padding-top: 100px;
-  &.login {
+  &.login, &.signup {
     padding-top: 60px;
     .umana__header {
       padding: 10px 0;
@@ -133,6 +133,12 @@ h4 {
   }
 }
 
+.umana-container {
+  width: 100%;
+  padding: 30px 20px;
+  background: $bg-medium;
+}
+
 .umana-layout {
   @include max-width;
   @include padding-x;
@@ -159,3 +165,44 @@ h4 {
     // box-shadow: -10px 5px 15px rgba(0, 0, 0, 0.05);
   }
 }
+
+
+.umana-element__add {
+  width: 100%;
+  padding: 0 20px;
+  height: 50px;
+  margin-top: -20px;
+  margin-bottom: 20px;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+ & > button.ant-btn.ant-btn-primary.ant-btn-circle.ant-btn-lg.ant-btn-icon-only.ant-btn-background-ghost {
+    width: 50px;
+    margin: 0;
+    margin-left: auto;
+    display: flex;
+    max-width: 50px;
+    min-width: 50px;
+    padding: 0;
+    height: 50px;
+    min-height: 50px;
+    max-height: 50px;
+    border: $border;
+    justify-content: center;
+    align-items: center;
+    align-self: flex-end;
+    background: $color-white;
+    i {
+      font-size: 32px;
+      color: $color-primary;
+      margin-right: 0 !important;
+    }
+    &:hover, &:focus, &:active {
+      background: $color-primary !important;
+      i {
+        color: $color-white;
+      }
+    }
+  }
+}
+
