--- a/assets/css/global.scss
+++ b/assets/css/global.scss
@@ -1,8 +1,11 @@
+@import '~antd/dist/antd.css';
+@import '~bootstrap/dist/css/bootstrap-grid.min.css';
+@import '~react-sortable-tree/style.css';
 @import './shared/variables';
 @import 'structure';
 @import 'grids';
 @import 'menus';
 // @import "forms";
 @import 'contents';
-// @import 'login';
+@import "~react-progress-2/main.css";
 @import 'misc';
