--- a/assets/css/shared/_variables.scss
+++ b/assets/css/shared/_variables.scss
@@ -94,10 +94,11 @@ $gk-layout-padding: (
   content: '';
   position: absolute;
   left: 50%;
-  top: 100%;
+  top: auto;
+  bottom: 0;
   margin-left: -8px;
-  width: 16px;
-  height: 16px;
+  width: 10px;
+  height: 10px;
   background-color: $primary;
   border-radius: 50px;
 }
@@ -119,10 +120,11 @@ $gk-layout-padding: (
   content: '';
   position: absolute;
   left: 50%;
-  top: 100%;
+  top: auto;
+  bottom: 0px;
   margin-left: -8px;
-  width: 16px;
-  height: 16px;
+  width: 10px;
+  height: 10px;
   background-color: $color-primary;
   border-radius: 50px;
 }
