--- a/assets/css/element/_form.scss
+++ b/assets/css/element/_form.scss
@@ -1,17 +1,21 @@
 @import '../shared/mixins';
 
-form.ant-form {
+form.ant-form,
+form.ant-form.ant-form-horizontal {
+  width: 100%;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
+  justify-content: space-between;
   font-family: $font-primary;
   .ant-form-item {
     width: 100%;
     display: flex;
     flex-direction: column !important;
     flex-wrap: nowrap;
-    flex: 1 1 100%;
+    flex: 1 1 auto;
     margin-bottom: 10px;
+    margin: 0 5px;
     &.ant-form-item-has-error {
       margin-bottom: 10px;
     }
@@ -27,6 +31,47 @@ form.ant-form {
     .ant-form-item-control {
       min-height: 50px;
       flex: 1;
+    }
+    &.form-item--sm {
+      width: 100%;
+      @include bp(xmedium) {
+        width: calc(50% - 10px);
+      }
+      @include bp(large) {
+        width: calc(33.33% - 10px);
+      }
+    }
+    &.form-item--md {
+      width: 100%;
+      @include bp(xmedium) {
+        width: calc(50% - 10px);
+      }
+    }
+    &.form-item--xf {
+      width: 100%;
+      @include bp(xmedium) {
+        width: calc(66% - 10px);
+      }
+    }
+    &.form-item--lg {
+      width: 100% !important;
+    }
+  }
+  .umana-form--group {
+    display: flex;
+    width: 100%;
+    flex-direction: row;
+    flex-wrap: wrap;
+    & > .ant-form-item.ant-row {
+      width: calc(33.33% - 20px);
+      margin: 0 10px;
+      flex: auto;
+      &.form-item--sm {
+        width: calc(33.33% - 20px);
+      }
+      &.form-item--fx {
+        width: calc(66% - 20px);
+      }
     }
   }
 }
