--- a/assets/css/global.scss
+++ b/assets/css/global.scss
@@ -17,3 +17,8 @@
 @import './element/input';
 @import './element/drawer';
 @import './element/buttons';
+@import './element/menu';
+@import './element/modale';
+
+// #Pages
+@import './pages/home/home';
