--- a/assets/css/shared/_variables.scss
+++ b/assets/css/shared/_variables.scss
@@ -72,6 +72,9 @@ $breakpoints: (
   'xmedium': (
     min-width: 720px,
   ),
+  'mediumxx': (
+    min-width: 890px,
+  ),
   'large': (
     min-width: 960px,
   ),
