--- a/assets/css/_login.scss
+++ b/assets/css/_login.scss
@@ -1,47 +1,7 @@
-.app {
-  &.login {
-    display: block;
-    background: #ffffff;
-    // background: #001529;
-  }
+//singup
 
-  &.signup {
-    display: block;
-    // background: #001529;
-    background: #ffffff;
-    background-size: cover;
-    background-attachment: fixed;
-  }
-
-  &--login,
-  &--signup {
-    height: 100%;
-
-    label,
-    p,
-    h1,
-    h3 {
-      // color: #ffffff;
-    }
-
-    .avatar {
-      margin-bottom: 24px;
-      text-align: center;
-    }
-
-    .info {
-      margin-top: 24px;
-    }
-  }
-}
-
-.login,
-.signup {
-  &--form {
-    // background-color: #000000;
-    background-color: #ffffff;
-    padding: 24px;
-    // border: 1px solid #000000;
-    // border: 1px solid #ffffff;
-  }
+.umana-signup {
+  @include max-width();
+  @include padding-x();
+  padding-top: 50px;
 }
