--- a/assets/css/element/_input.scss
+++ b/assets/css/element/_input.scss
@@ -2,7 +2,7 @@
 
 input.ant-input,
 textarea.ant-input {
-  background: $bg-blue;
+  background: $color-white;
   font-family: $font-primary !important;
   font-size: 14px !important;
   color: $color-text;
@@ -12,8 +12,8 @@ textarea.ant-input {
   &:hover,
   &:focus,
   &:active {
-    background-color: $bg-blue !important;
-    background: $bg-blue !important;
+    background-color: $color-white !important;
+    background: $color-white !important;
     border-color: $color-blue !important;
     border-radius: 0 !important;
     box-shadow: -10px 5px 15px rgba(0, 0, 0, 0.08) !important;
@@ -25,15 +25,15 @@ textarea.ant-input {
 .ant-input-password {
   padding: 0 10px 0 0 !important;
   box-shadow: none !important;
-  background: $bg-blue;
+  background: $color-white;
   color: $color-primary;
   .ant-input-suffix {
     display: flex;
     align-items: center;
   }
   & > .ant-input.ant-input-lg {
-    background: $bg-blue !important;
-    background-color: $bg-blue !important;
+    background: $color-white !important;
+    background-color: $color-white !important;
     padding: 0 10px;
     border: 0 !important;
     height: 35px;
@@ -75,19 +75,19 @@ textarea.ant-input {
 .ant-select.ant-select-single {
   width: 100%;
   box-shadow: none;
-  background: $bg-blue !important;
+  background: $color-white !important;
   color: $color-primary;
   &.ant-select-focused,
   &.ant-select-open {
     .ant-select-selector {
       border-color: $color-blue !important;
-      background: $bg-blue;
+      background: $color-white;
       color: $color-primary;
       box-shadow: -10px 5px 15px rgba(0, 0, 0, 0.08) !important;
     }
   }
   .ant-select-selector {
-    background: $bg-blue !important;
+    background: $color-white !important;
     height: 45px;
     box-shadow: none;
     border-radius: 0;
@@ -95,7 +95,7 @@ textarea.ant-input {
     .ant-select-selection-search,
     .ant-select-selection-item {
       border-color: $color-blue !important;
-      background: $bg-blue;
+      background: $color-white;
       line-height: 45px;
       color: $color-primary;
     }
@@ -103,7 +103,7 @@ textarea.ant-input {
     &:focus,
     &:active {
       border-color: $color-blue !important;
-      background: $bg-blue;
+      background: $color-white;
       box-shadow: -10px 5px 15px rgba(0, 0, 0, 0.08) !important;
     }
   }
@@ -114,7 +114,7 @@ textarea.ant-input {
   width: 100%;
   height: 45px;
   line-height: 45px;
-  background: $bg-blue;
+  background: $color-white;
   color: $color-primary;
   &.ant-input-number-focused,
   &:hover,
